// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar test NavBar snapshot with user with avatar 1`] = `
Array [
  <AppBar
    className="appbar"
    position="static"
  >
    <Toolbar>
      <Typography
        className="flex"
        color="inherit"
        variant="title"
      >
        Name of the restaurant
      </Typography>
      <Hidden
        only="xs"
      >
        <Button
          color="inherit"
        >
          Order
        </Button>
        <Button
          color="inherit"
        >
          Menu
        </Button>
        <Button
          color="inherit"
          onClick={[Function]}
        >
          <Avatar
            alt="avatar"
            src="avatar"
          />
          <Typography
            color="inherit"
          >
            Logout
          </Typography>
        </Button>
      </Hidden>
      <Hidden
        only={
          Array [
            "lg",
            "md",
            "sm",
          ]
        }
      >
        <IconButton
          aria-haspopup="true"
          aria-label="Menu"
          aria-owns={null}
          color="inherit"
          onClick={[Function]}
        >
          <MenuIcon />
        </IconButton>
        <Menu
          anchorEl={null}
          id="simple-menu"
          onClose={[Function]}
          open={false}
        >
          <MenuItem>
            Profile
          </MenuItem>
          <MenuItem>
            My account
          </MenuItem>
          <MenuItem
            onClick={[Function]}
          >
            <Avatar
              alt="avatar"
              src="avatar"
            />
            <Typography
              color="inherit"
            >
              Logout
            </Typography>
          </MenuItem>
        </Menu>
      </Hidden>
    </Toolbar>
  </AppBar>,
  <LogoutSnackbar
    onClose={[Function]}
    open={false}
  />,
]
`;

exports[`Navbar test NavBar snapshot with user without avatar 1`] = `
Array [
  <AppBar
    className="appbar"
    position="static"
  >
    <Toolbar>
      <Typography
        className="flex"
        color="inherit"
        variant="title"
      >
        Name of the restaurant
      </Typography>
      <Hidden
        only="xs"
      >
        <Button
          color="inherit"
        >
          Order
        </Button>
        <Button
          color="inherit"
        >
          Menu
        </Button>
        <Button
          color="inherit"
          onClick={[Function]}
        >
          <Typography
            color="inherit"
          >
            Logout
          </Typography>
        </Button>
      </Hidden>
      <Hidden
        only={
          Array [
            "lg",
            "md",
            "sm",
          ]
        }
      >
        <IconButton
          aria-haspopup="true"
          aria-label="Menu"
          aria-owns={null}
          color="inherit"
          onClick={[Function]}
        >
          <MenuIcon />
        </IconButton>
        <Menu
          anchorEl={null}
          id="simple-menu"
          onClose={[Function]}
          open={false}
        >
          <MenuItem>
            Profile
          </MenuItem>
          <MenuItem>
            My account
          </MenuItem>
          <MenuItem
            onClick={[Function]}
          >
            <Typography
              color="inherit"
            >
              Logout
            </Typography>
          </MenuItem>
        </Menu>
      </Hidden>
    </Toolbar>
  </AppBar>,
  <LogoutSnackbar
    onClose={[Function]}
    open={false}
  />,
]
`;

exports[`Navbar test NavBar snapshot without user 1`] = `
Array [
  <AppBar
    className="appbar"
    position="static"
  >
    <Toolbar>
      <Typography
        className="flex"
        color="inherit"
        variant="title"
      >
        Name of the restaurant
      </Typography>
      <Hidden
        only="xs"
      >
        <Button
          color="inherit"
        >
          Order
        </Button>
        <Button
          color="inherit"
        >
          Menu
        </Button>
        <Button
          color="inherit"
          onClick={[Function]}
        >
          Login
        </Button>
      </Hidden>
      <Hidden
        only={
          Array [
            "lg",
            "md",
            "sm",
          ]
        }
      >
        <IconButton
          aria-haspopup="true"
          aria-label="Menu"
          aria-owns={null}
          color="inherit"
          onClick={[Function]}
        >
          <MenuIcon />
        </IconButton>
        <Menu
          anchorEl={null}
          id="simple-menu"
          onClose={[Function]}
          open={false}
        >
          <MenuItem>
            Profile
          </MenuItem>
          <MenuItem>
            My account
          </MenuItem>
          <MenuItem
            onClick={[Function]}
          >
            Login
          </MenuItem>
        </Menu>
      </Hidden>
    </Toolbar>
  </AppBar>,
  <LoginDialog
    onClose={[Function]}
    onToggleSnackbar={[Function]}
    open={false}
  />,
  <LoginDialogSnackbar
    message=""
    onClose={[Function]}
    open={false}
  />,
  <LogoutSnackbar
    onClose={[Function]}
    open={false}
  />,
]
`;
